--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 <body>
     <header>
-        <h1>RAG Chatbot for RC - AskRC</h1>
+        <h1>RAG Chatbot for Research Computing - AskRC</h1>
     </header>
 
     <div class="content">
