--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <img src="RC Documentation.gif" alt="RC Documentation">
         </div>
 
-        <a href="https://www.url.com" class="button">Connect</a>
+        <a href="http://askrc-santo-edabgfgfeqbtg6bb.eastus-01.azurewebsites.net" class="button">Connect</a>
     </div>
 </body>
 
