--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
 
         <div class="gif">
-            <img src="RC Documentation.gif" alt="RC Documentation">
+            <img src="RC Documentation 5.gif" alt="RC Documentation">
         </div>
 
         <a href="http://askrc-santo-edabgfgfeqbtg6bb.eastus-01.azurewebsites.net" class="button">Connect</a>
